plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.5'
	id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.casper'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-quartz'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.kafka:spring-kafka'

    implementation group: 'com.amazonaws', name: 'aws-java-sdk-core', version: '1.12.583'
    implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.12.583'
    implementation group: 'com.amazonaws', name: 'aws-java-sdk', version: '1.12.583'
    implementation group: 'com.amazonaws', name: 'aws-java-sdk-sqs', version: '1.12.583'

	implementation group: 'com.vladmihalcea', name: 'hibernate-types-60', version: '2.21.1'
    implementation group: 'org.liquibase', name: 'liquibase-core', version: '4.24.0'

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	implementation 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.kafka:spring-kafka-test'
}

tasks.named('test') {
	useJUnitPlatform()
}